tests/errors/strptime_trailing.ki
var time = import("time")
discard time.strptime("2024-01-01XYZ", "%Y-%m-%d")
